# wools

./: Cargo.toml  LICENSE.md  README.md
src/: constraint.rs  lib.rs  main.rs  pattern.rs  word.rs  wordlist.rs
